@@ -324,6 +324,8 @@ void command_enablerecipe(Client *c, const Seperator *sep);
 void command_disablerecipe(Client *c, const Seperator *sep);
 void command_showspellslist(Client *c, const Seperator *sep);
 void command_npctype_cache(Client *c, const Seperator *sep);
+void command_merchantopenshop(Client *c, const Seperator *sep);
+void command_merchantcloseshop(Client *c, const Seperator *sep);
 
 #ifdef EQPROFILE
 void command_profiledump(Client *c, const Seperator *sep);
