@@ -209,6 +209,10 @@ public:
 	void SetSecSkill(uint8 skill_type)	{ sec_melee_type = skill_type; }
 
 	uint32	MerchantType;
+	bool	merchant_open;
+	inline void	MerchantOpenShop() { merchant_open = true; }
+	inline void	MerchantCloseShop() { merchant_open = false; }
+	inline bool	IsMerchantOpen() { return merchant_open; }
 	void	Depop(bool StartSpawnTimer = false);
 	void	Stun(int duration);
 	void	UnStun();
