@@ -1,5 +1,11 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 04/01/2014 ==
+demonstar55: Implemented ability for a merchant to open and close shop.
+	Lua quest functions: e.self:MerchantOpenShop() and e.self:MerchantCloseShop()
+	GM Commands: #merchant_open_shop (short: #open_shop) and #merchant_close_shop (short: #close_shop)
+		default to status 100, just in case you need to force the merchants status
+
 == 03/31/2014 ==
 Uleat: Fix for unconscious skillups.
 Uleat: Fix for crash issue with nullptr reference in recent Client::SummonItem() work.
